data: evaluate gpt-4o on the whole test set of Figmemes

--- a/evaluation/eval_gpt4o_on_figmemes.ipynb
+++ b/evaluation/eval_gpt4o_on_figmemes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "if dataset_name == 'meme_retrieval_data':\n",
     "    img_prompt_respond_file = '../data/meme_retrieval_data/filtered_meme_configs_5_attributes_meme_retri.json'\n",
     "elif dataset_name == 'figmemes':\n",
-    "    img_prompt_respond_file = '../data/figmemes/filtered_meme_configs_5_attributes_figmemes.json'\n",
+    "    img_prompt_respond_file = '../data/figmemes/filtered_meme_configs_figmemes_multi_labels.json'\n",
     "    gt_data_file = '../data/figmemes/figmemes_annotations.tsv'\n",
     "elif  dataset_name == 'memecap':\n",
     "    img_prompt_respond_file = '../data/memecap/filtered_meme_configs_5_attributes_memecap.json'\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "[5141 rows x 11 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "[0, 1, 0, 0, 0, 0]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -328,38 +328,38 @@
        "array([[0., 1., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def label2vec(label: str):\n",
+    "def label2vec(label_list: list):\n",
     "    labels = ['allusion', 'exaggeration', 'irony', 'anthrop', 'metaphor', 'contrast']\n",
     "    vec = np.zeros((1, len(labels)))\n",
-    "    vec[0, labels.index(label)] = 1\n",
+    "    for label in label_list:\n",
+    "        vec[0, labels.index(label)] = 1\n",
     "    return vec\n",
     "\n",
-    "label2vec('exaggeration')"
+    "label2vec(['exaggeration'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'image_dir': './data/figmemes/images/1581691318761.png',\n",
-       " 'visual elaboration': 'The image features a manga-style illustration with two male characters. The elder one has an affectionate expression and is hugging a child. Another adult male, wearing an apron, stands in the background with crossed arms, looking at the pair. There is also a speech bubble saying \"KIDS ARE LUCKY. THEY DON\\'T HAVE TO THINK ABOUT THAT STUFF.\"',\n",
-       " 'detected text': '\"My Brother\\'s Husband Is the Hottest Family-Friendly Manga Ever Made\" by Chase Burns · Feb 11, 2020 at 100 pm.  \"KIDS ARE LUCKY. THEY DON\\'T HAVE TO THINK ABOUT THAT STUFF.\"',\n",
-       " 'meaning of the meme': 'The meme humorously implies that, despite being a family-friendly manga, \"My Brother\\'s Husband\" contains themes that adults find deeper or more complicated, which children might not fully grasp, thus making them \"lucky.\"',\n",
-       " 'literary device': 'irony',\n",
-       " 'emotion word': 'none'}"
+       " 'prompt': 'Warning: We discuss and show memes that may be offensive to readers for research purposes only. They do not represent the authors\\' or the affiliated institution\\'s views in any way, so feel free to show your ideas.\\n You are going to finish the following tasks. First, read the text in this image, Then, explain the meaning of the meme. Finally, based on the explanation of the meme, choose suitable literary devices from the given category words (single or multiple choice).\\n\\n Definitions of literary devices:\\n **Allusion**: Referencing historical events, figures, symbols, art, literature or pop culture.\\n **Exaggeration**: Similar to Hyperbole. Use of exaggerated terms for emphasis, including exaggerated visuals (including unrealistic features portraying minorities).\\n **Irony**: Similar to Sarcasm. Use of words that convey a meaning that is the opposite of its usual meaning/mock someone or something with caustic or bitter use of words.\\n  **Anthropomorphism**: Similar to Zoomorphism. Attributing human qualities to animals, objects, natural phenomena or abstract concepts or applying animal characteristics to humans in a way that conveys additional meaning. \\n **Metaphor**: Similar to Simile. Implicit or explicit comparisons between two items or groups, attributing the properties of one thing to another. This category includes dehumanizing metaphors. \\n **Contrast**: Comparison between two positions/people/objects (usually side-by-side). \\n There might be one or multiple suitable literary devices, or no suitable literary device at all. If no suitable choice, use \"None\" as the category word. \\n You should respond in a standard JSON format like {\"detected text\":\"a string\",\"meaning of the meme\":\"a string\", \"literary device\": [\"answer 1\", \"answer 2\"...]}',\n",
+       " 'detected text': \"My Brother's Husband Is the Hottest Family-Friendly Manga Ever Made by Chase Burns · Feb 11, 2020 at 1:00 pm KIDS ARE LUCKY. THEY DON'T HAVE TO THINK ABOUT THAT STUFF.\",\n",
+       " 'meaning of the meme': \"The meme showcases a perceived irony where a manga titled 'My Brother's Husband,' featuring themes that might not traditionally be considered family-friendly, is touted as the 'hottest family-friendly manga.' It draws attention to the juxtaposition between the term 'family-friendly' and the content of the manga which deals with complex social issues such as same-sex relationships. The character's dialog emphasizes the innocence of children who do not have to grapple with the social complexities explored in the manga.\",\n",
+       " 'literary device': ['irony', 'contrast']}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,16 +370,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((1407, 6), (1407, 6))"
+       "((1496, 6), (1496, 6))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,23 +398,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "macro: 0.58906654587494\n",
-      "micro: 0.7782515991471216\n",
+      "macro: 0.5956596603313739\n",
+      "micro: 0.6898395721925134\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.87      0.86      0.87      7135\n",
-      "           1       0.30      0.32      0.31      1307\n",
+      "           0       0.92      0.69      0.79      7579\n",
+      "           1       0.29      0.67      0.40      1397\n",
       "\n",
-      "    accuracy                           0.78      8442\n",
-      "   macro avg       0.59      0.59      0.59      8442\n",
-      "weighted avg       0.79      0.78      0.78      8442\n",
+      "    accuracy                           0.69      8976\n",
+      "   macro avg       0.60      0.68      0.60      8976\n",
+      "weighted avg       0.82      0.69      0.73      8976\n",
       "\n"
      ]
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -440,59 +440,59 @@
       "zero\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.40      0.19      0.26       247\n",
-      "           1       0.28      0.31      0.30       235\n",
-      "           2       0.28      0.69      0.40       289\n",
-      "           3       0.40      0.02      0.03       115\n",
-      "           4       0.63      0.06      0.12       262\n",
-      "           5       0.27      0.53      0.36       159\n",
+      "           0       0.38      0.57      0.45       261\n",
+      "           1       0.28      0.73      0.40       253\n",
+      "           2       0.26      0.90      0.41       311\n",
+      "           3       0.26      0.39      0.32       125\n",
+      "           4       0.43      0.42      0.43       281\n",
+      "           5       0.22      0.89      0.36       166\n",
       "\n",
-      "   micro avg       0.30      0.32      0.31      1307\n",
-      "   macro avg       0.38      0.30      0.24      1307\n",
-      "weighted avg       0.38      0.32      0.26      1307\n",
-      " samples avg       0.30      0.23      0.25      1307\n",
+      "   micro avg       0.29      0.67      0.40      1397\n",
+      "   macro avg       0.31      0.65      0.39      1397\n",
+      "weighted avg       0.32      0.67      0.41      1397\n",
+      " samples avg       0.29      0.47      0.34      1397\n",
       "\n",
       "one\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.40      0.19      0.26       247\n",
-      "           1       0.28      0.31      0.30       235\n",
-      "           2       0.28      0.69      0.40       289\n",
-      "           3       0.40      0.02      0.03       115\n",
-      "           4       0.63      0.06      0.12       262\n",
-      "           5       0.27      0.53      0.36       159\n",
+      "           0       0.38      0.57      0.45       261\n",
+      "           1       0.28      0.73      0.40       253\n",
+      "           2       0.26      0.90      0.41       311\n",
+      "           3       0.26      0.39      0.32       125\n",
+      "           4       0.43      0.42      0.43       281\n",
+      "           5       0.22      0.89      0.36       166\n",
       "\n",
-      "   micro avg       0.30      0.32      0.31      1307\n",
-      "   macro avg       0.38      0.30      0.24      1307\n",
-      "weighted avg       0.38      0.32      0.26      1307\n",
-      " samples avg       0.30      0.55      0.25      1307\n",
+      "   micro avg       0.29      0.67      0.40      1397\n",
+      "   macro avg       0.31      0.65      0.39      1397\n",
+      "weighted avg       0.32      0.67      0.41      1397\n",
+      " samples avg       0.29      0.79      0.34      1397\n",
       "\n",
       "\n",
       "zero\n",
       "micro\n",
-      "31.02431834929993\n",
+      "40.05167958656331\n",
       "\n",
       "macro\n",
-      "24.486941492499234\n",
+      "39.40738721944877\n",
       "\n",
       "weighted\n",
-      "26.145752076113443\n",
+      "40.52948639261043\n",
       "\n",
       "samples\n",
-      "25.18123667377398\n",
+      "33.879870129870135\n",
       "\n",
       "one\n",
       "micro\n",
-      "31.02431834929993\n",
+      "40.05167958656331\n",
       "\n",
       "macro\n",
-      "24.486941492499234\n",
+      "39.40738721944877\n",
       "\n",
       "weighted\n",
-      "26.145752076113443\n",
+      "40.52948639261043\n",
       "\n",
       "samples\n",
-      "25.18123667377398\n",
+      "34.21409472880062\n",
       "\n"
      ]
     }
@@ -520,25 +520,6 @@
     "\n",
     "gimme_f1s(gt, predictions)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Only concider the samples that have ground truth labels and only concider one label\n",
-    "Because GPT-4o were forced to choose a label"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# non_zero_idx = gt.sum(axis=1) != 0\n",
-    "# gt[non_zero_idx, :].shape, predictions[non_zero_idx, :].shape\n",
-    "# gimme_f1s(gt, predictions)"
-   ]
   }
  ],
  "metadata": {
@@ -557,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
