feat: filter out template based memes from the test set of Figmemes, and calculate their F1 score, both with and without the About section in the prompt.

--- a/data_annotation/post_processing_json.ipynb
+++ b/data_annotation/post_processing_json.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "16"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,11 +34,14 @@
     "# dataset_name = 'figmemes'\n",
     "dataset_name = 'figmemes'\n",
     "\n",
+    "# file_suffix = \"_1-1537_figmemes_multi_labels\"\n",
+    "file_suffix = \"_templatic_with_about_section\"\n",
+    "\n",
     "img_prompt_respond_file = ''\n",
     "if dataset_name == 'meme_retrieval_data':\n",
     "    img_prompt_respond_file = '../data/meme_retrieval_data/img_prompt_respond_1-33283.json' # img_prompt_respond_1-33283.json\n",
     "elif dataset_name == 'figmemes':\n",
-    "    img_prompt_respond_file = '../data/figmemes/img_prompt_respond_templatic.json'\n",
+    "    img_prompt_respond_file = f'../data/figmemes/img_prompt_respond{file_suffix}.json'\n",
     "elif  dataset_name == 'memecap':\n",
     "    img_prompt_respond_file = '../data/memecap/img_prompt_respond_1-559_memecap.json'\n",
     "\n",
@@ -50,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +80,7 @@
        " 16)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +125,7 @@
        " 'literary device': ['anthrop']}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,14 +184,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"detected text\": \"NASA REVEALS SATURN IS ACTUALLY BIG NIGGA WITH HULA HOOP. The world is shocked...what else is the government hiding from us.\",\n",
+      "  \"meaning of the meme\": \"The meme humorously claims that the planet Saturn is actually an obese Black man (referred to as 'Big Nigga') who is holding a hula hoop, which represents Saturn's rings. This is a satirical commentary employing surreal and absurd imagery to mock the idea of hidden truths or conspiracies revealed by authoritative sources like NASA.\",\n",
+      "  \"literary device\": [\"Exaggeration\", \"Irony\", \"Allusion\"]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"{\\n  \\\"detected text\\\": \\\"NASA REVEALS SATURN IS ACTUALLY BIG NIGGA WITH HULA HOOP. The world is shocked...what else is the government hiding from us.\\\",\\n  \\\"meaning of the meme\\\": \\\"The meme humorously claims that the planet Saturn is actually an obese Black man (referred to as 'Big Nigga') who is holding a hula hoop, which represents Saturn's rings. This is a satirical commentary employing surreal and absurd imagery to mock the idea of hidden truths or conspiracies revealed by authoritative sources like NASA.\\\",\\n  \\\"literary device\\\": [\\\"Exaggeration\\\", \\\"Irony\\\", \\\"Allusion\\\"]\\n}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +219,7 @@
    "source": [
     "# Save JSON file\n",
     "print(len(meme_annotations))\n",
-    "with open(f'../data/figmemes/filtered_meme_configs_figmemes_multi_labels.json', \"w\") as outfile: \n",
+    "with open(f'../data/figmemes/filtered_meme_configs{file_suffix}.json', \"w\") as outfile: \n",
     "      json.dump(meme_annotations, outfile, indent=4)"
    ]
   },
@@ -215,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -313,14 +330,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<function <lambda> at 0x7f4688177010>,\n",
+      "defaultdict(<function <lambda> at 0x7fe5391b7f40>,\n",
       "            {   'allusion': 7,\n",
       "                'anthrop': 5,\n",
       "                'contrast': 2,\n",
@@ -344,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
