--- a/evaluation/eval_gpt4o_on_figmemes.ipynb
+++ b/evaluation/eval_gpt4o_on_figmemes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "if dataset_name == 'meme_retrieval_data':\n",
     "    img_prompt_respond_file = '../data/meme_retrieval_data/filtered_meme_configs_5_attributes_meme_retri.json'\n",
     "elif dataset_name == 'figmemes':\n",
-    "    img_prompt_respond_file = '../data/figmemes/filtered_meme_configs_figmemes_multi_labels.json'\n",
+    "    img_prompt_respond_file = '../data/figmemes/filtered_meme_configs_templatic_without_about_section.json'\n",
     "    gt_data_file = '../data/figmemes/figmemes_annotations.tsv'\n",
     "elif dataset_name == 'figmemes_cot':\n",
     "    img_prompt_respond_file = '../data/figmemes/filtered_meme_configs_figmemes_cot.json'\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "1476396825243.jpg  2017     0     1      0          0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,16 +304,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 0, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# gt_data.loc['01144951214.png'][:6].tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +333,7 @@
        "array([[0., 1., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,22 +351,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'image_dir': './data/figmemes/images/1458964859691.jpg',\n",
-       " 'prompt': 'Tasks: \\n1. Extract the texts on the meme;\\n2. Explain the meme from three perspectives: the humor of the meme; how the meme conveys the humor; And, the emotion behind the meme;\\n3. Choose suitable literary devices from the given candidates;\\n4. Choose suitable emotional words from the given candidates\\n\\nThe context of the meme: {}\\n\\nEmotion labels: anger, fear, surprise, sadness, disgust, contempt, happiness, none\\n\\nLiterary devices: \\n**Allusion**: Referencing historical events, figures, symbols, art, literature or pop culture.\\n \\n**Exaggeration**: Similar to Hyperbole. Use of exaggerated terms for emphasis, including exaggerated visuals (including unrealistic features portraying minorities).\\n \\n**Irony**: Similar to Sarcasm. Use of words that convey a meaning that is the opposite of its usual meaning/mock someone or something with caustic or bitter use of words.\\n  \\n**Anthropomorphism**: Similar to Zoomorphism. Attributing human qualities to animals, objects, natural phenomena or abstract concepts or applying animal characteristics to humans in a way that conveys additional meaning. \\n \\n**Metaphor**: Similar to Simile. Implicit or explicit comparisons between two items or groups, attributing the properties of one thing to another. This category includes dehumanizing metaphors. \\n \\n**Contrast**: Comparison between two positions/people/objects (usually side-by-side).\\n**None**: No literary devices are applied to the meme.\\n\\nExamples of explanation of the meme:\\n1. The meme uses a scene from the classic TV show \"Dragnet\", where a serious character is talking to someone in a seemingly humorous and judgmental manner. The humor arises from the juxtaposition of the formal, old-fashioned speech with the modern concept of someone being \"high\" or under the influence of drugs. This contrast creates a humorous effect by placing a very serious, straight-laced character in a context that he seems out of touch with. (No literary device from above is used here, so it is \"None\")\\n2. The meme humorously contrasts the rigorous training of US Marines with an image of an older Russian woman casually carrying a heavy log. The humor lies in the exaggerated comparison, suggesting that what is intense training for US Marines is just a mundane task for a Russian woman. (The literary device \"Contrast\" is used here for comparing the rigorous training of US Marines with an older Russian woman)\\n3. The meme uses the popular internet character Pepe the Frog, depicted as Hillary Clinton with a pin reading \"Hillary 2016\". She is shown confidently sitting with Donald Trump, also in meme form, crying at her feet. The humor comes from the exaggerated and ironic portrayal of both characters, reflecting a political commentary on the 2016 U.S. Presidential election. (\"Anthropomorphism\" and  \"Exaggeration\" are used here to say that Hellary was going to win Trump easily)\\n\\nNow, based on the meme (image), the context of the meme, those examples, the emotion labels, and the definition of literary devices, write down the detected text and explanation of the meme. Then, choose one or multiple appropriate literary devices and emotional words. Follow the JSON format: \\n{\\n\"detected text\": \"string\",\\n\"explanation\": \"a string\",\\n\"emotion\": \"a string\",\\n\"literary device\": [\"word 1\", …],\\n\"emotion word\": [\"word 1\", …]\\n}',\n",
-       " 'detected text': 'Choose life (30.19)',\n",
-       " 'explanation': \"The meme shows a simplistic line drawing of a person with their arms raised, exuding positivity. Combined with the text 'Choose life,' it likely references a motivational or inspirational message. The number '(30.19)' might not be clear without context, but it hints at a specific verse, possibly from religious or philosophical texts, which adds depth to the message. The humor in the meme isn't overt but rather light-hearted and uplifting, conveying a sense of joy and positive encouragement.\",\n",
-       " 'emotion': 'happiness',\n",
-       " 'literary device': ['allusion'],\n",
-       " 'emotion word': ['joy', 'positivity']}"
+       "{'image_dir': './data/figmemes/images/1632045519218.png',\n",
+       " 'prompt': 'Warning: We discuss and show memes that may be offensive to readers for research purposes only. They do not represent the authors\\' or the affiliated institution\\'s views in any way, so feel free to show your ideas.\\n You are going to finish the following tasks. First, read the text in this image, Then, explain the meaning of the meme. Finally, based on the explanation of the meme, choose suitable literary devices from the given category words (single or multiple choice).\\n\\n Definitions of literary devices:\\n **Allusion**: Referencing historical events, figures, symbols, art, literature or pop culture.\\n **Exaggeration**: Similar to Hyperbole. Use of exaggerated terms for emphasis, including exaggerated visuals (including unrealistic features portraying minorities).\\n **Irony**: Similar to Sarcasm. Use of words that convey a meaning that is the opposite of its usual meaning/mock someone or something with caustic or bitter use of words.\\n  **Anthropomorphism**: Similar to Zoomorphism. Attributing human qualities to animals, objects, natural phenomena or abstract concepts or applying animal characteristics to humans in a way that conveys additional meaning. \\n **Metaphor**: Similar to Simile. Implicit or explicit comparisons between two items or groups, attributing the properties of one thing to another. This category includes dehumanizing metaphors. \\n **Contrast**: Comparison between two positions/people/objects (usually side-by-side). \\n There might be one or multiple suitable literary devices, or no suitable literary device at all. If no suitable choice, use \"None\" as the category word. \\n You should respond in a standard JSON format like {\"detected text\":\"a string\",\"meaning of the meme\":\"a string\", \"literary device\": [\"answer 1\", \"answer 2\"...]}',\n",
+       " 'detected text': '',\n",
+       " 'meaning of the meme': \"The meme depicts a cartoon frog character looking intently at its keyboard and screen while working on something, while another panel shows an enlarged figure pressing the 'Close' button on a window. The meme humorously portrays the idea of being watched or having one's activities monitored closely, possibly implying a sense of paranoia or the pressure of working under someone's supervision.\",\n",
+       " 'literary device': ['exaggeration', 'anthrop']}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,16 +375,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((11, 6), (11, 6))"
+       "((16, 6), (16, 6))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,53 +403,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 0., 0., 0., 0., 0.],\n",
-       "       [0., 1., 1., 1., 0., 0.],\n",
-       "       [0., 1., 1., 0., 0., 1.],\n",
-       "       [0., 0., 1., 0., 0., 1.],\n",
-       "       [1., 0., 1., 0., 0., 0.],\n",
-       "       [1., 0., 0., 0., 0., 1.],\n",
-       "       [0., 0., 1., 0., 0., 1.],\n",
-       "       [0., 1., 0., 0., 0., 1.],\n",
-       "       [0., 1., 1., 0., 0., 0.],\n",
-       "       [1., 0., 0., 0., 0., 1.],\n",
-       "       [0., 0., 1., 1., 0., 0.]])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "macro: 0.49302987197724035\n",
-      "micro: 0.5909090909090909\n",
+      "macro: 0.6283502084574152\n",
+      "micro: 0.7291666666666665\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.79      0.65      0.72        52\n",
-      "           1       0.22      0.36      0.27        14\n",
+      "           0       0.95      0.72      0.82        83\n",
+      "           1       0.30      0.77      0.43        13\n",
       "\n",
-      "    accuracy                           0.59        66\n",
-      "   macro avg       0.50      0.51      0.49        66\n",
-      "weighted avg       0.67      0.59      0.62        66\n",
+      "    accuracy                           0.73        96\n",
+      "   macro avg       0.63      0.75      0.63        96\n",
+      "weighted avg       0.86      0.73      0.77        96\n",
       "\n"
      ]
     }
@@ -456,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -466,59 +445,59 @@
       "zero\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.25      0.25      0.25         4\n",
-      "           1       0.25      0.33      0.29         3\n",
-      "           2       0.14      0.50      0.22         2\n",
-      "           3       0.50      1.00      0.67         1\n",
-      "           4       0.00      0.00      0.00         2\n",
-      "           5       0.17      0.50      0.25         2\n",
+      "           0       0.00      0.00      0.00         0\n",
+      "           1       0.44      0.80      0.57         5\n",
+      "           2       0.22      1.00      0.36         2\n",
+      "           3       0.17      1.00      0.29         1\n",
+      "           4       0.50      0.50      0.50         4\n",
+      "           5       0.50      1.00      0.67         1\n",
       "\n",
-      "   micro avg       0.22      0.36      0.27        14\n",
-      "   macro avg       0.22      0.43      0.28        14\n",
-      "weighted avg       0.20      0.36      0.25        14\n",
-      " samples avg       0.26      0.25      0.23        14\n",
+      "   micro avg       0.30      0.77      0.43        13\n",
+      "   macro avg       0.31      0.72      0.40        13\n",
+      "weighted avg       0.41      0.77      0.50        13\n",
+      " samples avg       0.28      0.44      0.33        13\n",
       "\n",
       "one\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.25      0.25      0.25         4\n",
-      "           1       0.25      0.33      0.29         3\n",
-      "           2       0.14      0.50      0.22         2\n",
-      "           3       0.50      1.00      0.67         1\n",
-      "           4       1.00      0.00      0.00         2\n",
-      "           5       0.17      0.50      0.25         2\n",
+      "           0       0.00      1.00      0.00         0\n",
+      "           1       0.44      0.80      0.57         5\n",
+      "           2       0.22      1.00      0.36         2\n",
+      "           3       0.17      1.00      0.29         1\n",
+      "           4       0.50      0.50      0.50         4\n",
+      "           5       0.50      1.00      0.67         1\n",
       "\n",
-      "   micro avg       0.22      0.36      0.27        14\n",
-      "   macro avg       0.38      0.43      0.28        14\n",
-      "weighted avg       0.35      0.36      0.25        14\n",
-      " samples avg       0.26      0.61      0.23        14\n",
+      "   micro avg       0.30      0.77      0.43        13\n",
+      "   macro avg       0.31      0.88      0.40        13\n",
+      "weighted avg       0.41      0.77      0.50        13\n",
+      " samples avg       0.28      0.88      0.33        13\n",
       "\n",
       "\n",
       "zero\n",
       "micro\n",
-      "27.027027027027025\n",
+      "43.47826086956522\n",
       "\n",
       "macro\n",
-      "27.91005291005291\n",
+      "39.79076479076478\n",
       "\n",
       "weighted\n",
-      "24.77324263038549\n",
+      "50.28305028305028\n",
       "\n",
       "samples\n",
-      "22.727272727272727\n",
+      "33.125\n",
       "\n",
       "one\n",
       "micro\n",
-      "27.027027027027025\n",
+      "43.47826086956522\n",
       "\n",
       "macro\n",
-      "27.91005291005291\n",
+      "39.79076479076478\n",
       "\n",
       "weighted\n",
-      "24.77324263038549\n",
+      "50.28305028305028\n",
       "\n",
       "samples\n",
-      "22.727272727272727\n",
+      "33.125\n",
       "\n"
      ]
     }
